Changed GameLib to include Common and GameLib individually, not the parent folder, but that makes it so I don't need to specify CoreLib/ or Common/ when including in either CoreLib or GameLib, which I would like to do. Leaving it like this for now. Will remove commented out code next.

--- a/CoreLib/.vscode/tasks.json
+++ b/CoreLib/.vscode/tasks.json
@@ -18,7 +18,8 @@
 				"-o",
 				"${workspaceFolder}/Build/CoreLib/main",
 				"-I${workspaceFolder}",
-				"-I${workspaceFolder}/../"	// No bueno, it will let me include GameLib. But if I want to use "Common/Defines? etc in GameLib, I need to do it in CoreLib too, otherwise it cannot compile CoreLib cpp files. So if GameLib wants to use Common/... notation, CoreLib must do so too, and that means we must find a way to exclude GameLib includes
+				"-I${workspaceFolder}/../Common/"	// No bueno, it will let me include GameLib. But if I want to use "Common/Defines" etc in GameLib, I need to do it in CoreLib too, otherwise it cannot compile CoreLib cpp files. So if GameLib wants to use Common/... notation, CoreLib must do so too, and that means we must find a way to exclude GameLib includes
+				// "-I${workspaceFolder}/../"	// No bueno, it will let me include GameLib. But if I want to use "Common/Defines" etc in GameLib, I need to do it in CoreLib too, otherwise it cannot compile CoreLib cpp files. So if GameLib wants to use Common/... notation, CoreLib must do so too, and that means we must find a way to exclude GameLib includes
 			],
 			"options": {
 				"cwd": "${fileDirname}"
